--- a/portfolio.css
+++ b/portfolio.css
@@ -19,6 +19,14 @@
                             #001a4f,
                             #0054b5,
                             #001a4f);
+    --bodyGradTablet: linear-gradient(to bottom,
+                            #682967,
+                            #b34269,
+                            #682967);
+    --bodyGradCelular: linear-gradient(to bottom,
+                            #e9725e,
+                            #ffb257,
+                            #e9725e);
     --headerNavGrad: linear-gradient(to left,
                             #b5fcfe,
                             #d3f5ff,
@@ -38,17 +46,17 @@
                             #511375,
                             #070733);
 }
-.headerNav, .headerNavDiv, .headerTxt, .headerTxt div, .main2, .main3, .main2 div, .main3 div, .projetos, .sessoes p, fieldset, footer{
+.headerNav, .headerNavDiv, .header, .header div, .headerFoto, .main2, .main3, .main2 div, .main3 div, .projetos, .sessoes p, fieldset, footer{
     display: flex;
 }
 .projetos, .sessoes, .sessoes p, .main2 div, .main3 div, footer{
     justify-content: center;
 }
-.headerNav, .headerTxt, .main2, .main3, .main2 div, .main3 div, .projetos, .sessoes p, footer{
+.headerNav, .header, .headerFoto,.main2, .main3, .main2 div, .main3 div, .projetos, .sessoes p, footer{
     align-items: center;
 }
 body{
-    margin: 5%;
+    margin: 5% 15% 5% 15%;
     background-image: var(--bodyGrad);
 }
 .headerNav{
@@ -62,8 +70,8 @@ body{
     gap: 15px;
     margin-right: 30px;
 }
-.headerTxt{
-    height: 250px;
+.header{
+    height: 280px;
     color: var(--azulEscuro);
     font-family: cursive;
     font-size: 150%;
@@ -72,15 +80,40 @@ body{
     border-bottom-left-radius: var(--bordaDaPagina);
     border-bottom-right-radius: var(--bordaDaPagina);
 }
-.headerTxt div{
+.headerFoto{
+    height: 330px;
+    color: var(--azulEscuro);
+    font-family: cursive;
+    font-size: 150%;
+    background-image: var(--headerGrad);
+    justify-content: space-evenly;
+    border-bottom-left-radius: var(--bordaDaPagina);
+    border-bottom-right-radius: var(--bordaDaPagina);
+}
+.header div{
     flex-direction: column;
     gap: 10px;
     text-shadow: 0 2px 3px #f3ddff,
-                 0 3px 3px #ba72e7;
+                 0 3px 3px #ce7fff;
 }
-.headerFoto{
+.foto{
     width: 200px;
     height: 200px;
+    border-radius: 200px;
+    background-image: url(perfil.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 260px;
+    box-shadow: 0 0 10px 3px white,
+                0 0 0px  3px white,
+                0 0 30px     #ec5bff,
+                0 0 40px     #ec5bff,
+                0 0 50px     #0c4acf,
+                0 0 60px     #0c4acf;
+}
+.foto2{
+    width: 250px;
+    height: 250px;
     border-radius: 200px;
     background-image: url(perfil.png);
     background-repeat: no-repeat;
@@ -102,29 +135,6 @@ body{
                  0 0 25px #d300a5;
     border-radius: var(--bordaDaPagina);
     margin-bottom: 30px;
-}
-.main2, .main3{
-    height: auto;
-    background-image: var(--mainGrad);
-    flex-direction: column;
-    border-radius: var(--bordaDaPagina);
-    font-size: 150%;
-}
-.main2 strong{
-    color: white;
-    text-shadow: 0 3px 5px #0c4acf;
-}
-.main2 p{
-    margin-bottom: 20px;
-    color: #070733;
-}
-.main3{
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-}
-.main2 div, .main3 div{
-    flex-direction: column;
-    margin: var(--margemMain)
 }
 .sessoes{
     width: 100%;
@@ -214,8 +224,69 @@ input, textarea{
     border-radius: 10px;
 }
 textarea{
-    margin-bottom: 20px;
     border-style: none;
+}
+.btnEnviar, .btnLimpar{
+    width: 120px;
+    height: 40px;
+    border-radius: 10px;
+    border-style: none;
+    box-shadow:  0 6px 10px 0 #0c4acfb0;
+    color: #001a4f;
+    font-size: large;
+    margin: 30px;
+}
+.btnEnviar{
+    background-image: linear-gradient(#b2ffb2,
+                                      #8af086 20%, 
+                                      #00deb6);
+    text-shadow: 0 2px 3px #fff7b2,
+                 0 2px 3px #b2ffb2;
+}
+.btnLimpar{
+    background-image: linear-gradient(#e19bf7,
+                                      #eb56f8 20%, 
+                                      #e020c0);
+    text-shadow: 0 2px 3px #e19bf7,
+                 0 2px 3px #eb56f8;
+}
+.main2, .main3{
+    height: auto;
+    background-image: var(--mainGrad);
+    flex-direction: column;
+    border-radius: var(--bordaDaPagina);
+    font-size: 150%;
+}
+.main2 strong{
+    color: white;
+    text-shadow: 0 3px 5px #0c4acf;
+}
+.main2 div{
+    flex-direction: column;
+    margin: 50px 20% 50px 20%;
+}
+.titulo{
+    margin-bottom: 20px;
+}
+ul{
+    list-style: none;
+    margin-bottom: 40px;
+}
+.main2 li{
+    color: #070733;
+}
+li::before{
+    content: "▫️";
+    text-shadow: 0 3px 5px #0c4acfb0;
+}
+.paragrafo{
+    color: #070733;
+    text-indent: 40px;
+    margin-bottom: 40px;
+}
+.main3{
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 footer{
     color: white;
@@ -228,4 +299,13 @@ footer{
 }
 footer a{
     color: #00d9ff;
+}
+/*RESPONSIVO*/
+/*Tela de tablet*/
+@media(min-width: 679px) and (max-width: 1023px){
+
+}
+/*Tela de celular*/
+@media(max-width: 678px){
+    
 }
