--- a/portfolio.css
+++ b/portfolio.css
@@ -184,7 +184,7 @@ body{
 }
 div[class^="sctDiv"]{
     width: 100%;
-    height: 90%;
+    height: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
@@ -303,9 +303,29 @@ footer a{
 /*RESPONSIVO*/
 /*Tela de tablet*/
 @media(min-width: 679px) and (max-width: 1023px){
-
+    .sessoes{
+        width: 100%;
+        height: 1500px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 20%);
+        align-content: center;
+        justify-content: center;
+        gap: 70px;
+    }
 }
 /*Tela de celular*/
 @media(max-width: 678px){
-    
+    .foto{
+        width: 180px;
+        height: 180px;
+    }
+    .sessoes{
+        width: 100%;
+        height: 2150px;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(8, 200px);
+        align-content: center;
+        justify-content: center;
+        gap: 70px;
+    }
 }
